# AirComix-Server-Python

./: .env.docker  .env.example  .gitignore  DEVELOPMENT.md  Makefile  README.md  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: CHECK_SECRETS.md  SETUP.md  TROUBLESHOOTING.md
.github/workflows/: auto-tag.yml  docker-build.yml  initial-release.yml  manual-release.yml  release.yml  test.yml  update-dockerhub.yml
.kiro/hooks/: auto-retry-test.json
.kiro/specs/comix-server-python-port/: design.md  requirements.md  tasks.md
.kiro/steering/: korean-language.md  product.md  structure.md  tech.md
app/: __init__.py  exception_handlers.py  exceptions.py  main.py
app/api/: __init__.py  handlers.py  routes.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  config.py  data.py
app/services/: __init__.py  archive.py  file_watcher.py  filesystem.py  image.py  thumbnail.py
app/utils/: __init__.py  encoding.py  logging.py  path.py
deployment/logging/: logging.conf
deployment/nginx/: comix-server.conf
deployment/supervisor/: comix-server.conf
deployment/systemd/: comix-server.service
docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: API.md  CONFIGURATION.md  DOCKER.md  PRODUCTION.md  TROUBLESHOOTING.md
examples/: README.md
examples/basic-setup/: .env.example  README.md  setup.sh  test-client.py
examples/basic-setup/sample-manga/: README.md
php_origins/: .env.example  README.md  pyproject.toml  requirements.txt
php_origins/app/: __init__.py  main.py
php_origins/app/api/: __init__.py
php_origins/app/models/: __init__.py  config.py
php_origins/app/services/: __init__.py
php_origins/app/utils/: __init__.py  logging.py
php_origins/tests/: __init__.py  conftest.py  test_config.py
scripts/: quick-docker-test.sh  setup-github-actions.sh  test-auth.sh  test-docker-build.sh
tests/: conftest.py  test_api_routes.py  test_archive_listing_endpoint.py  test_archive_service.py  test_config.py  test_data_models.py  test_directory_listing_simple.py  test_encoding_utils.py  test_exception_handlers.py  test_exceptions.py  test_filesystem_simple.py  test_fixtures.py  test_image_service.py  test_integration.py  test_manga_handler.py  test_path_utils.py  test_simple.py
tests/compatibility/: test_aircomix_compatibility.py
tests/fixtures/: __init__.py  create_sample_archives.py  encoding_test_data.py  fixture_manager.py  generate_test_data.py  sample_data.py  test_configs.py
tests/performance/: test_load_performance.py
tests/test_archives/: comic_volume_2.cbz  manga_chapter_2.cbz
tests/test_complete_data/configs/: .env.full  .env.invalid  .env.production  Dockerfile.test  docker-compose.test.yml
tests/test_complete_data/edge_cases/: no_extension
tests/test_complete_data/mixed_content/: .hidden_file
tests/test_complete_data/mixed_content/__MACOSX/: ._file
tests/test_sample_data/configs/: .env.test
tests/test_sample_data/manga/: Thumbs.db
tests/test_sample_data/manga/시리즈 B/: Chapter 002.cbz
